Bug 164845 - FILEOPEN DOC: tabstops missing from Header paragraph style (and others)
Summary: FILEOPEN DOC: tabstops missing from Header paragraph style (and others)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: low minor
Assignee: Justin L
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, filter:doc
Depends on:
Blocks: Tab-Character
  Show dependency treegraph
 
Reported: 2025-01-24 14:34 UTC by Justin L
Modified: 2025-02-21 11:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
forum-mso-de-47008.doc: the example document (143.00 KB, application/msword)
2025-01-24 14:34 UTC, Justin L
Details
forum-mso-de-47008.doc_mso.pdf: how it looks in Word 2019 (73.37 KB, application/pdf)
2025-01-24 14:34 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2025-01-24 14:34:15 UTC
Created attachment 198741 [details]
forum-mso-de-47008.doc: the example document

The page number should be on the right side of the header - over top of the header underline - not beyond the page margin.

The page number started jumping over in 25.2 (backported to 24.2.5) with
commit 10d753b8aadb50ec4309551b97d4cf2163ea3e3d
Author: Michael Stahl on Thu Jun 13 12:59:19 2024 +0200
    tdf#158658 sw: text formatting: try to make TabOverMargin more crazy

Found by Collabora's mso-test
Comment 1 Justin L 2025-01-24 14:34:59 UTC
Created attachment 198742 [details]
forum-mso-de-47008.doc_mso.pdf: how it looks in Word 2019
Comment 2 raal 2025-02-17 20:29:41 UTC
Confirm with Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7da1497aa462e2b719aa9b308a749caf7b9a19b1
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 Justin L 2025-02-20 21:43:18 UTC
Removing regression. The only reason it "worked before" is because it took up two lines. Now, MS Word is also taking up two lines, but that isn't really fair because the field takes up one of those entire lines. Remove the field, and the two tabs are still on the same line in MS Word - not taking up two lines like was doing in LO. So mstahl's commit seems just fine.

The underlying problem is that only one tabstop is imported (at 15cm) - missing the tabstop at 8cm (which likely is supposed to come from the "Header" paragraph style - which defines tabstops at 8cm and 16cm).

However, the Header paragraph wasn't importing any tab settings.

Magic Solution? {NS_sprm::PChgTabs::val,          &SwWW8ImplReader::Read_Tab},
Comment 4 Commit Notification 2025-02-21 11:22:32 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/018daed42eb3b69b7566348849aa2a13fd288f4a

tdf#164845 doc import: read_tabs for sprmPChgTabs

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.