tdf#164845 doc import: read_tabs for sprmPChgTabs

I'm not sure how we possibly got away with not reading
so many tabstops in styles.

Change-Id: I66f66c94f70423db866de10945429444a4906027
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181979
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins